# ai-safety-mcp-server

./: .env  .env.example  Dockerfile  MODEL_CONFIGURATION.md  README.md  SETUP.md  ai_safety_kb.db  docker-compose.yml  pyproject.toml
scripts/: populate_kb.py  test_all_tools.py  test_logging.py
src/core/: config.py  errors.py  logging.py
src/mcp_server/: schemas.py  server.py  tool_registry.py
src/safety_evals/: __init__.py  base.py  bias.py  capability_risk.py  deception.py  dual_use.py  jailbreak.py  overall.py  prompt_injection.py  toxicity.py
src/safety_governance/: retrieval.py
src/safety_interp/: __init__.py  activation_patching.py  activations.py  attention.py  backend.py  causal_tracing.py  direct_logit_attribution.py  gradient_attribution.py  logit_lens.py  residual_stream.py
src/safety_kb/: indexing.py  models.py  retrieval.py
tests/: test_eval_tools.py  test_interp_tools.py  test_kb_tools.py  test_server_integration.py
tests/fixtures/: sample_docs.jsonl
