[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "ai-safety-mcp-server"
version = "0.1.0"
description = "Transport-agnostic MCP server exposing AI-safety knowledge base, evaluation, and interpretability tools."
readme = "README.md"
authors = [{ name = "AI Safety Research Collective" }]
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.22",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "chromadb>=0.5",
  "sqlmodel>=0.0.22",
  "litellm>=1.43",
  "transformers>=4.40",
  "torch>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "orjson>=3.10",
  "anyio>=4.5",
  "tenacity>=8.2"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "respx>=0.21"
]

dev = [
  "ruff>=0.5",
  "mypy>=1.9"
]

[project.scripts]
ai-safety-mcp-server = "mcp_server.server:main"

[tool.pytest.ini_options]
addopts = "-ra --maxfail=1"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "Q", "ARG", "C4"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = [
  "src/core",
  "src/mcp_server",
  "src/safety_kb",
  "src/safety_evals",
  "src/safety_interp",
  "src/safety_governance",
]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "tests",
  "README.md",
  "pyproject.toml",
  ".env.example",
]
